# recolor-pdf

./: README.md
java/: README.md  colors.properties  settings.gradle.kts
java/app/: build.gradle.kts
java/app/src/main/java/org/example/: App.java  ColorReplacingCanvasEditor.java  Colors.java  PdfCanvasEditor.java
java/app/src/test/java/org/example/: AppTest.java
py/: Makefile  README.md  colors.json  main.py  pyproject.toml
